src/styles.scss
// FONTS
/* roboto-mono-300 - latin */
@font-face {
    font-family: "Roboto Mono";
    font-style: normal;
    font-weight: 300;
    src: local(""), url("/assets/fonts/roboto-mono-v13-latin-300.woff2") format("woff2");
}
/* roboto-mono-regular - latin */
@font-face {
    font-family: "Roboto Mono";
    font-style: normal;
    font-weight: 400;
    src: local(""), url("/assets/fonts/roboto-mono-v13-latin-regular.woff2") format("woff2");
}
/* roboto-mono-500 - latin */
@font-face {
    font-family: "Roboto Mono";
    font-style: normal;
    font-weight: 500;
    src: local(""), url("/assets/fonts/roboto-mono-v13-latin-500.woff2") format("woff2");
}
/* roboto-mono-600 - latin */
@font-face {
    font-family: "Roboto Mono";
    font-style: normal;
    font-weight: 600;
    src: local(""), url("/assets/fonts/roboto-mono-v13-latin-600.woff2") format("woff2");
}
/* roboto-mono-700 - latin */
@font-face {
    font-family: "Roboto Mono";
    font-style: normal;
    font-weight: 700;
    src: local(""), url("/assets/fonts/roboto-mono-v13-latin-700.woff2") format("woff2");
}

:root {
    --system-fonts: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
    --default-fonts: "Roboto Mono", Menlo, Monaco, "Courier New", Courier, monospace;
}

// GENERAL SYLES
*:not(markdown) > * {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: "Roboto Mono", Menlo, Monaco, "Courier New", Courier, monospace;
    scroll-behavior: smooth;
}

a {
    color: inherit;
    text-decoration: none;
}

::selection {
    background-color: var(--color-text-secondary);
}

*:not(select.open) {
    cursor: none !important;
}

html, body {
    overflow-x: hidden;
}

a * {
    pointer-events: none;
}

#about-me .highlight {
    font-family: var(--system-fonts);
}

#about-me, #contact {
    .highlight, a {
        color: var(--color-text-main);
    }
}

body, app-root {
    min-height: 100vh;
    display: block;
    position: relative;
}

body {
    background: var(--bg-color);
    
    &::-webkit-scrollbar {
        width: 12px;
    }
    
    &::-webkit-scrollbar-thumb {
        border-radius: 12px;
        border: 4px solid transparent;
        background-color: var(--scrollbar-bg);
        background-clip: content-box;
    }
    
    &::-webkit-scrollbar-track {
        background-color: transparent;
    }

    &.light {
        --bg-color: #f0f0f0;
        --scrollbar-bg: #333333;
        --bg-secondary-color: #30333e;
        --text-color: #161618;
        --color-text-main: #fb24a2;
        --terminal-shadow: 0px 10px 40px #52525290;
    }
    
    &.dark {
        --bg-color: #23252c;
        --scrollbar-bg: #ffffff;
        --bg-secondary-color: #323744;
        --text-color: #ffffff;
        --color-text-main: #ff69c1;
        --color-text-secondary: #888888;
        --terminal-shadow: 0px 10px 20px #00000030;
    }
}

